--- a/new-site/index.html
+++ b/new-site/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/gmaps.min.js"></script>
 
-    <title>.</title>
+    <title>La chouette agence - Grande Entreprise web design à Lyon</title>
 
     
 <!-- Analytics -->
