--- a/new-site/index.html
+++ b/new-site/index.html
@@ -70,7 +70,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
+					Bienvenue sur le site de la chouette agence! Votre agence de web design de Lyon
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -93,7 +93,10 @@
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
-			<div class="col-sm-4">
+			<h2 class="mg-md text-center">
+				Nos Services:
+			</h2>
+			<div class="col-sm-4">				
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
