Ajout de titre h2 et modification de la talle de police.

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -86,16 +86,13 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">				
-				<p>
-					La chouette agence est une agence de web design qui aide les
+				<h2>
+					La chouette agence est une agence de web design qui aide <br>les
 					entreprises à devenir attractives et visibles sur Internet.
-				</p>
+				</h2>
 			</div>
 		</div>
-		<div class="row voffset-lg med-width-whitespace">
-			<h2 class="mg-md text-center">
-				Nos Services:
-			</h2>
+		<div class="row voffset-lg med-width-whitespace">			
 			<div class="col-sm-4">				
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
@@ -167,10 +164,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p>
+				<h2>
 					Nous travaillons avec beaucoup de clients,<br />
 					voici nos réalisations.
-				</p>
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
