--- a/new-site/index.html
+++ b/new-site/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta
 	name="description"
-	content="La chouette agence est une grande entreprise web design basée à Lyon. Spécialiste de la création, conception et refonte de site web, notre agence de web design saura repondre à toute vos attentes. "
+	content="La chouette agence est une grande entreprise web design basée à Lyon. Spécialiste de la création, conception et refonte de site web, notre agence de web design saura répondre à toutes vos attentes. "
   	/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -70,7 +70,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Bienvenue sur le site de la chouette agence ! Votre agence web design de Lyon
+					Bienvenue sur le site de La chouette agence ! Grande agence web design de Lyon.
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
